--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-*/bin
-*/include
-*/lib
-*/pyvenv.cfg
+networking/*/bin
+networking/*/include
+networking/*/lib
+networking/*/pyvenv.cfg
+web-based/*/bin
+web-based/*/include
+web-based/*/lib
+web-based/*/pyvenv.cfg
+*/.idea
