--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
-networking/port-scanner/bin
-networking/port-scanner/include
-networking/port-scanner/lib
-networking/port-scanner/pyvenv.cfg
+networking/port-scanner/*
 */.idea
